added to boiler plate

--- a/index.html
+++ b/index.html
@@ -2,12 +2,32 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <!-- Favicon/Icon (Optional) -->
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+    <!-- Basic SEO Tags -->
+    <title>My React App</title>
+    <meta
+      name="description"
+      content="A modern React application built with Vite."
+    />
+
+    <!-- Open Graph (Social Sharing) (Optional) -->
+    <!-- Replace with your own details when you reuse this boilerplate -->
+    <meta property="og:title" content="My React App" />
+    <meta
+      property="og:description"
+      content="A modern React application built with Vite."
+    />
+    <meta property="og:image" content="/img-share.jpg" />
+    <meta property="og:url" content="https://example.com" />
   </head>
+
   <body>
     <div id="root"></div>
+
+    <!-- Main App Script -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
