--- a/index.html
+++ b/index.html
@@ -3,31 +3,37 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Favicon/Icon (Optional) -->
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link 
+    href="https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Questrial&display=swap" 
+    rel="stylesheet">
 
-    <!-- Basic SEO Tags -->
-    <title>My React App</title>
+    <!-- Favicons / Manifest (from generator) -->
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="Bytesite" />
+    <link rel="manifest" href="/site.webmanifest" />
+
+    <!-- Title & Description -->
+    <title>Bytesite Digital | Website Development & SEO Services</title>
     <meta
       name="description"
-      content="A modern React application built with Vite."
+      content="Best Website Design Company — Experience a website that's swift, secure, and easy to navigate with our professional development services, all optimized for SEO."
     />
 
-    <!-- Open Graph (Social Sharing) (Optional) -->
-    <!-- Replace with your own details when you reuse this boilerplate -->
-    <meta property="og:title" content="My React App" />
+    <!-- Social Sharing / Open Graph -->
+    <meta property="og:title" content="Bytesite Digital | Website Development & SEO Services" />
     <meta
       property="og:description"
-      content="A modern React application built with Vite."
+      content="We build responsive, high-performance websites with clean code, optimized for all devices."
     />
-    <meta property="og:image" content="/img-share.jpg" />
-    <meta property="og:url" content="https://example.com" />
+    <!-- <meta property="og:image" content="https://bytsites.com/images/share-image.jpg" />  do if bothered -->
+    <meta property="og:url" content="https://bytsites.com/" />
   </head>
 
   <body>
     <div id="root"></div>
-
-    <!-- Main App Script -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
