--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
       content="We build responsive, high-performance websites with clean code, optimized for all devices."
     />
     <meta property="og:url" content="https://bytsites.com/" />
+    <!-- Adding og:image property -->
+    <meta property="og:image" content="https://bytsites.com/web-app-manifest-512x512.png" />
+
   </head>
 
   <body>
