--- a/index.html
+++ b/index.html
@@ -4,19 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Preconnect to Google Fonts domains for faster load times -->
+    <!-- Preconnects -->
     <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-    <!-- Asynchronously load Google Fonts -->
+    <!-- Google Fonts Asynchronously -->
     <link
       href="https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Questrial&display=swap"
       rel="stylesheet"
       media="print"            
       onload="this.media='all'"  
     />
-
-    <!-- Fallback for browsers with JavaScript disabled -->
     <noscript>
       <link
         href="https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Questrial&display=swap"
@@ -24,33 +22,32 @@
       />
     </noscript>
 
-    <!-- Favicons / Manifest (from generator) -->
+    <!-- Favicons -->
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <meta name="apple-mobile-web-app-title" content="Bytesite" />
     <link rel="manifest" href="/site.webmanifest" />
 
-    <!-- Title & Description -->
+    <!-- SEO Tags -->
     <title>Bytesite Digital | Website Development & SEO Services</title>
     <meta
       name="description"
       content="Best Website Design Company — Experience a website that's swift, secure, and easy to navigate with our professional development services, all optimized for SEO."
     />
 
-    <!-- Social Sharing / Open Graph -->
+    <!-- Open Graph / Social Media Tags -->
     <meta property="og:title" content="Bytesite Digital | Website Development & SEO Services" />
     <meta
       property="og:description"
       content="We build responsive, high-performance websites with clean code, optimized for all devices."
     />
     <meta property="og:url" content="https://bytsites.com/" />
-    <!-- Adding og:image property -->
     <meta property="og:image" content="https://bytsites.com/web-app-manifest-512x512.png" />
+    <meta property="og:type" content="website" />
+    <meta property="fb:app_id" content="your_app_id_here" />
 
   </head>
-
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
