complete boiler-plate

--- a/index.html
+++ b/index.html
@@ -4,52 +4,43 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Preconnects -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
-    <!-- Google Fonts Asynchronously -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Questrial&display=swap"
-      rel="stylesheet"
-      media="print"            
-      onload="this.media='all'"  
-    />
-    <noscript>
-      <link
-        href="https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Questrial&display=swap"
-        rel="stylesheet"
-      />
-    </noscript>
-
-    <!-- Favicons -->
+    <!-- OPTIONAL: Placeholder Favicons -->
+    <!-- Remove these or replace with placeholders if you want a generic blueprint -->
+    <!--
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="manifest" href="/site.webmanifest" />
+    -->
 
-    <!-- SEO Tags -->
-    <title>Bytesite Digital | Website Development & SEO Services</title>
+    <!-- SEO Tags (Generic / Placeholder) -->
+    <title>Business Name Goes Here </title>
     <meta
       name="description"
-      content="Best Website Design Company — Experience a website that's swift, secure, and easy to navigate with our professional development services, all optimized for SEO."
+      content="This is a generic React/Vite boilerplate. Customize your description here."
     />
 
-    <!-- Open Graph / Social Media Tags -->
-    <meta property="og:title" content="Bytesite Digital | Website Development & SEO Services" />
+    <!-- Open Graph / Social Media Tags (Optional) -->
+    <meta property="og:title" content="{{PROJECT_NAME}} Boilerplate" />
     <meta
       property="og:description"
-      content="We build responsive, high-performance websites with clean code, optimized for all devices."
+      content="Generic boilerplate for React/Vite."
     />
-    <meta property="og:url" content="https://bytsites.com/" />
-    <meta property="og:image" content="https://bytsites.com/web-app-manifest-512x512.png" />
+    <meta property="og:url" content="https://example.com" />
+    <meta
+      property="og:image"
+      content="https://example.com/path-to-default-image.png"
+    />
     <meta property="og:type" content="website" />
-    <meta property="fb:app_id" content="your_app_id_here" />
+    <!-- <meta property="fb:app_id" content="YOUR_APP_ID" /> -->
 
   </head>
   <body>
+    <!-- React root element -->
     <div id="root"></div>
+
+    <!-- Main entry script for your React application -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
