--- a/index.html
+++ b/index.html
@@ -127,6 +127,14 @@
     <!-- Main Entry Script:
          Loads your React application bundle.
     -->
+
+    <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+     <input type="text" name="name" />
+     <input type="email" name="email" />
+     <textarea name="message"></textarea>
+   </form>
+   
+
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
