--- a/index.html
+++ b/index.html
@@ -124,17 +124,17 @@
     -->
     <div id="root"></div>
 
-    <!-- Main Entry Script:
-         Loads your React application bundle.
-    -->
-
+    <!-- Netlify form -->
     <form name="contact" netlify netlify-honeypot="bot-field" hidden>
-     <input type="text" name="name" />
-     <input type="email" name="email" />
-     <textarea name="message"></textarea>
-   </form>
-   
-
+         <input type="text" name="name" />
+         <input type="email" name="email" />
+         <input type="text" name="number" />
+         <textarea name="message"></textarea>
+     </form>
+     
+     <!-- Main Entry Script:
+          Loads your React application bundle.
+     -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
