--- a/index.html
+++ b/index.html
@@ -1,140 +1,95 @@
-<!-- index.html -->
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <!--
-      Viewport Meta Tag:
-      Ensures proper scaling and rendering on mobile devices.
-    -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Favicon & App Icons:
-         These tags specify the icons used in browser tabs, bookmarks, and on mobile devices.
-    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="shortcut icon" href="/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="manifest" href="/site.webmanifest" />
-     -->
+    <!-- Content Security Policy -->
+    <meta http-equiv="Content-Security-Policy" content="
+      default-src 'self';
+      script-src 'self' 'unsafe-inline' https://maps.googleapis.com;
+      style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
+      img-src 'self' data: https://maps.gstatic.com https://maps.googleapis.com;
+      connect-src 'self';
+      font-src 'self' https://fonts.gstatic.com;
+    ">
 
-    <!-- Page Title:
-         Appears in browser tabs and is used by search engines as the clickable headline.
-    -->
     <title>Business Name Goes Here</title>
 
-    <!-- Meta Description:
-         Provides a summary of the page content for search engines and social previews.
-    -->
     <meta
       name="description"
-      content="This is a generic React/Vite boilerplate. Customize your description here."
-    />
+      content="relevant description goes here."
+    >
 
-    <!-- Meta Keywords:
-         (Optional) Lists targeted keywords. Note: most modern search engines give little weight to this tag.
-    -->
     <meta
       name="keywords"
-      content="React, Vite, Boilerplate, SEO, Business, Digital, Web Development"
-    />
+      content="business keywords go here"
+    >
 
-    <!-- Canonical Tag:
-         Helps prevent duplicate content issues by specifying the preferred URL.
-    -->
-    <link rel="canonical" href="https://example.com" />
+    <link rel="canonical" href="https://domain-url-goes-here.com.au">
 
-    <!-- Robots Meta Tag:
-         Instructs search engine crawlers to index the page and follow the links.
-    -->
-    <meta name="robots" content="index, follow" />
+    <meta name="robots" content="index, follow">
+    <meta name="x-robots-tag" content="index, follow">
+    <meta name="publisher" content="Business Name Goes Here">
+    <meta name="theme-color" content="#FFFFFF">
 
-    <!-- X-Robots-Tag:
-         Additional crawler instructions (often set via HTTP headers, but can be included here).
-    -->
-    <meta name="x-robots-tag" content="index, follow" />
-
-    <!-- Publisher Meta Tag:
-         Specifies the publisher or brand behind the content.
-    -->
-    <meta name="publisher" content="Business Name Goes Here" />
-
-    <!-- Theme Color:
-         Sets the browser toolbar color on supported mobile devices.
-    -->
-    <meta name="theme-color" content="#ffffff" />
-
-    <!-- Open Graph Meta Tags:
-         Enhance link previews when your site is shared on social media platforms.
-    -->
-    <meta property="og:title" content="Business Name Goes Here Boilerplate" />
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Business Name Goes Here">
     <meta
       property="og:description"
-      content="Generic boilerplate for React/Vite. Customize as needed."
-    />
-    <meta property="og:url" content="https://example.com" />
+      content="relevant description goes here"
+    >
+    <meta property="og:url" content="https://domain-url-goes-here.com.au">
     <meta
       property="og:image"
-      content="https://example.com/path-to-default-image.png"
-    />
-    <meta property="og:type" content="website" />
-    <meta property="og:locale" content="en_US" />
+      content="https://domain-url-goes-here.com.au/favicon.svg"
+    >
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="en_AU">
 
-    <!-- Twitter Card Meta Tags:
-         Provide rich content previews for tweets sharing your page.
-    -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Business Name Goes Here Boilerplate" />
+    <!-- Facebook App ID (Commented out for Facebook) -->
+    <!-- This meta tag is for Facebook integration and insights -->
+    <!-- <meta property="fb:app_id" content="YOUR_FACEBOOK_APP_ID_HERE" /> -->
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Business Name Goes Here">
     <meta
       name="twitter:description"
-      content="Generic boilerplate for React/Vite. Customize as needed."
-    />
+      content="relevant description goes here"
+    >
     <meta
       name="twitter:image"
-      content="https://example.com/path-to-default-image.png"
-    />
+      content="https://domain-url-goes-here.com.au/favicon.svg"
+    >
 
-    <!-- Structured Data (JSON-LD):
-         Embeds Business Schema markup to help search engines understand your business details.
-         Customize the address, telephone, and other business details as needed.
-    -->
+     <!-- 
+     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
+     <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+     <link rel="shortcut icon" href="/favicon.ico">
+     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+     <link rel="manifest" href="/site.webmanifest">  -->
+
+    <!-- JSON-LD: LocalBusiness -->
     <script type="application/ld+json">
-      {
-        "@context": "https://schema.org",
-        "@type": "LocalBusiness",
-        "name": "Business Name Goes Here",
-        "url": "https://example.com",
-        "logo": "https://example.com/path-to-logo.png",
-        "description": "This is a generic React/Vite boilerplate. Customize your description here.",
-        "address": {
-          "@type": "PostalAddress",
-          "streetAddress": "1234 Business St",
-          "addressLocality": "City",
-          "addressRegion": "State",
-          "postalCode": "12345",
-          "addressCountry": "Country"
-        },
-        "telephone": "+1234567890"
-      }
+    {
+    }
     </script>
   </head>
   <body>
-    <!-- React Root Element:
-         This is where your React application will be mounted.
+    <!--
+      Netlify form fallback:
+      This hidden form ensures Netlify knows we have a form named "contact".
+      The fields match your React form so Netlify recognizes them.
     -->
-    <div id="root"></div>
-
-    <!-- Netlify form -->
     <form name="contact" netlify netlify-honeypot="bot-field" hidden>
-         <input type="text" name="name" />
-         <input type="email" name="email" />
-         <input type="text" name="number" />
-         <textarea name="message"></textarea>
-     </form>
-     
-     <!-- Main Entry Script:
-          Loads your React application bundle.
-     -->
+      <input type="text" name="name" />
+      <input type="email" name="email" />
+      <input type="text" name="number" />
+      <textarea name="message"></textarea>
+    </form>
+
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
