boiler-plate upgrade

--- a/index.html
+++ b/index.html
@@ -1,95 +1,202 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Required meta tags -->
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
 
     <!-- Content Security Policy -->
-    <meta http-equiv="Content-Security-Policy" content="
-      default-src 'self';
-      script-src 'self' 'unsafe-inline' https://maps.googleapis.com;
-      style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
-      img-src 'self' data: https://maps.gstatic.com https://maps.googleapis.com;
-      connect-src 'self';
-      font-src 'self' https://fonts.gstatic.com;
-    ">
+    <!-- IMPORTANT: For Google Analytics 4 to work, allow GTM & GA domains in script-src/connect-src. 
+         Add or remove domains as needed (e.g., if you need to load from other third-party sources). -->
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="
+        default-src 'self';
+        script-src 'self' 'unsafe-inline' https://www.googletagmanager.com https://maps.googleapis.com;
+        style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
+        img-src 'self' data: https://maps.gstatic.com https://maps.googleapis.com;
+        connect-src 'self' https://www.google-analytics.com https://stats.g.doubleclick.net;
+        font-src 'self' https://fonts.gstatic.com;
+      "
+    />
 
-    <title>Business Name Goes Here</title>
-
+    <!-- Minimal Fallback Title & Description (Home) -->
+    <!-- React Helmet or your framework can override on other pages if you use an SPA. -->
+    <title>Business Name | Quick Tagline or Service</title>
     <meta
       name="description"
-      content="relevant description goes here."
-    >
+      content="Short fallback description for your homepage. This is displayed if JS isn't rendered."
+    />
 
+    <!-- Canonical URL for Homepage -->
+    <link
+      rel="canonical"
+      href="https://example.com/"
+    />
+
+    <!-- Basic SEO Meta Tags -->
     <meta
       name="keywords"
-      content="business keywords go here"
-    >
+      content="keyword1, keyword2, brand name"
+    />
+    <meta
+      name="robots"
+      content="index, follow"
+    />
+    <meta
+      name="x-robots-tag"
+      content="index, follow"
+    />
+    <meta
+      name="publisher"
+      content="Business Name Goes Here"
+    />
+    <meta
+      name="theme-color"
+      content="#FFFFFF"
+    />
 
-    <link rel="canonical" href="https://domain-url-goes-here.com.au">
-
-    <meta name="robots" content="index, follow">
-    <meta name="x-robots-tag" content="index, follow">
-    <meta name="publisher" content="Business Name Goes Here">
-    <meta name="theme-color" content="#FFFFFF">
-
-    <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Business Name Goes Here">
+    <!-- Open Graph (fallback for Home) -->
+    <meta
+      property="og:title"
+      content="Business Name | Quick Tagline"
+    />
     <meta
       property="og:description"
-      content="relevant description goes here"
-    >
-    <meta property="og:url" content="https://domain-url-goes-here.com.au">
+      content="Short fallback description for your homepage. For best results, keep it around 150 characters."
+    />
+    <meta
+      property="og:url"
+      content="https://example.com/"
+    />
     <meta
       property="og:image"
-      content="https://domain-url-goes-here.com.au/favicon.svg"
-    >
-    <meta property="og:type" content="website">
-    <meta property="og:locale" content="en_AU">
+      content="https://example.com/favicon.svg"
+    />
+    <meta
+      property="og:type"
+      content="website"
+    />
+    <meta
+      property="og:locale"
+      content="en_AU"
+    />
 
-    <!-- Facebook App ID (Commented out for Facebook) -->
-    <!-- This meta tag is for Facebook integration and insights -->
-    <!-- <meta property="fb:app_id" content="YOUR_FACEBOOK_APP_ID_HERE" /> -->
-
-    <!-- Twitter Card Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Business Name Goes Here">
+    <!-- Twitter Card (fallback for Home) -->
+    <meta
+      name="twitter:card"
+      content="summary_large_image"
+    />
+    <meta
+      name="twitter:title"
+      content="Business Name | Quick Tagline"
+    />
     <meta
       name="twitter:description"
-      content="relevant description goes here"
-    >
+      content="Short fallback description for your homepage."
+    />
     <meta
       name="twitter:image"
-      content="https://domain-url-goes-here.com.au/favicon.svg"
-    >
+      content="https://example.com/favicon.svg"
+    />
 
-     <!-- 
-     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
-     <link rel="icon" type="image/svg+xml" href="/favicon.svg">
-     <link rel="shortcut icon" href="/favicon.ico">
-     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-     <link rel="manifest" href="/site.webmanifest">  -->
+    <!-- Favicon & App Icons -->
+    <link
+      rel="icon"
+      type="image/png"
+      href="/favicon-96x96.png"
+      sizes="96x96"
+    />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/favicon.svg"
+    />
+    <link
+      rel="shortcut icon"
+      href="/favicon.ico"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/apple-touch-icon.png"
+    />
+    <link
+      rel="manifest"
+      href="/site.webmanifest"
+    />
 
-    <!-- JSON-LD: LocalBusiness -->
+    <!-- JSON-LD: LocalBusiness (Fallback) -->
     <script type="application/ld+json">
     {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "Business Name Goes Here",
+      "url": "https://example.com/",
+      "image": "https://example.com/favicon.svg",
+      "telephone": "0400 000 000",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "123 Example St",
+        "addressLocality": "City",
+        "addressRegion": "State",
+        "postalCode": "1234",
+        "addressCountry": "AU"
+      },
+      "description": "Boilerplate fallback JSON-LD for your local business listing.",
+      "openingHoursSpecification": {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": [
+          "Monday",
+          "Tuesday",
+          "Wednesday",
+          "Thursday",
+          "Friday"
+        ],
+        "opens": "08:00",
+        "closes": "17:00"
+      }
     }
     </script>
   </head>
+
+  <!-- Google Analytics (GA4) -->
+  <!-- Replace G-XXXXXXXXXX with your own Measurement ID -->
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-XXXXXXXXXX');
+  </script>
+
   <body>
-    <!--
-      Netlify form fallback:
-      This hidden form ensures Netlify knows we have a form named "contact".
-      The fields match your React form so Netlify recognizes them.
-    -->
-    <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+    <!-- Netlify form fallback (hidden) -->
+    <form
+      name="contact"
+      netlify
+      netlify-honeypot="bot-field"
+      hidden
+    >
       <input type="text" name="name" />
       <input type="email" name="email" />
       <input type="text" name="number" />
       <textarea name="message"></textarea>
     </form>
 
+    <!-- React/SPA root -->
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+
+    <!-- Your app's main script (entry point) -->
+    <script
+      type="module"
+      src="/src/main.jsx"
+    ></script>
   </body>
 </html>
