--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     />
 
     <!-- Favicon & App Icons -->
-    <link
+    <!-- <link
       rel="icon"
       type="image/png"
       href="/favicon-96x96.png"
@@ -113,7 +113,7 @@
     <link
       rel="manifest"
       href="/site.webmanifest"
-    />
+    /> -->
 
     <!-- JSON-LD: LocalBusiness (Fallback) -->
     <script type="application/ld+json">
